--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<span class="pink-text">Интернет-магазин строительных материалов и инструментов для ремонта</span>
 							<div class="header-contacts">
 								<span  class="pink-text">+7 (812) 555-05-55</span>
-								<span  class="pink-adress">г.Санкт-Петербург,ул.Б.Конюшенная,д19/8</span>
+								<span  class="blue-text">г.Санкт-Петербург,ул.Б.Конюшенная,д19/8</span>
 							</div>
 							<div class="login">
 								<a class="sign-in" href="#">Войти</a>
@@ -49,7 +49,7 @@
 		<div class="promo-content">
 			<div class="container">
 				<div class="promo-block">
-					<div class="promo-new">
+					<div class="promo flag-new">
 						<span class="promo-title">Материалы</span>
 						<a class="promo-btn" href="#">На любой вкус</a>
 						<img class="promo-icon" src="img/icon-bucket.png" width="44" height="65"alt="">
@@ -68,205 +68,221 @@
 				<div class="promo-block">
 					<div class="slider-wrap">
 						<div class="slider">
-							<div class="slide">
+							<div class="slide-1">
 								<p>Перфораторы</p>
 								<p>Настоящие мужские игрушки</p>
 								<a class="promo-btn promo-red" href="#">Открыть каталог</a>
 								<img class="background" src="img/slider-1.jpg" width="620" height="266" alt="">
 							</div>
-						</div>
-					</div>
-					<div class="features">
-						<div>
-							<span class="promo-title">Скидки 50%</span>
-							<a class="promo-btn" href="#">На 350 товаров</a>
-							<img class="promo-icon" src="img/icon-bucket.png" width="44" height="65" alt="">
-						</div>
-						<div>
-							<span class="promo-title">Доставка</span>
-							<a class="promo-btn" href="#">Бесплатно</a>
-							<img class="promo-icon" src="img/icon-track.png" width="78" height="63" alt="">
-						</div>
-					</div>
-				</div>
-				<section class="section">
-					<div class="selection-header">
-						<h3 class="section-title">Популярные товары:</h3>
-						<a class="section-btn" href="#">Все популярные товары</a>
-					</div>
-					<div class="catalog">
-						<div class="item">
-							<img src="img/bfg-9000.jpg" width="184" height="164" alt="">
-							<p>Перфоратор BOSCH BFG 9000</p>
-							<p>32 500 р.</p>
-							<a class="btn-red" href="#">25 500 р.</a>
-							<div class="buy-item">
-								<a href="#">Купить</a>
-								<a href="#">В закладки</a>
-							</div>
-						</div>
-						<div class="item">
-							<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
-							<p>Перфоратор BOSCH BFG 3000</p>
-							<p>22 500 р.</p>
-							<a class="btn-red" href="#">15 500 р.</a>
-							<div class="buy-item">
-								<a href="#">Купить</a>
-								<a href="#">В закладки</a>
-							</div>
-						</div>
-						<div class="item">
-							<img src="img/bfg-6000.jpg" width="144" height="128" alt="">
-							<p>Перфоратор BOSCH BFG 6000</p>
-							<p>30 500 р.</p>
-							<a class="btn-red" href="#">25 500 р.</a>
-							<div class="buy-item">
-								<a href="#">Купить</a>
-								<a href="#">В закладки</a>
-							</div>
-						</div>
-						<div class="item-new no-discount">
-							<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
-							<p>Перфоратор BOSCH BFG 2000</p>
-							<a class="btn-red" href="#">12 500 р.</a>
-							<div class="buy-item">
-								<a href="#">Купить</a>
-								<a href="#">В закладки</a>
+							<div class="slide-2">
+								<p>Дрели</p>
+								<p>Соседям на радость!</p>
+								<a class="promo-btn promo-red" href="#">Открыть каталог</a>
+								<img class="background" src="img/slider-2.jpg" width="620" height="266" alt="">
 							</div>
 						</div>
 					</div>
-				</section>
-				<section class="section">
-					<div class="selection-header">
-						<h3 class="section-title">Популярные производители:</h3>
-						<a class="section-btn" href="#">Все производители</a>
-					</div>
-					<div class="brands">
-						<a href="#">
-							<img src="img/bosch.jpg" width="220" height="145" alt="">
-						</a>
-						<a href="#">
-							<img src="img/Makita.jpg" width="220" height="145" alt="">
-						</a>
-						<a href="">
-							<img src="img/DeWALT.jpg" width="220" height="145" alt="">
-						</a>
-						<a href="#">
-							<img src="img/Интерскол.jpg" width="220" height="145" alt="">
-						</a>
-						<a href="#">
-							<img src="img/Hitachi.jpg" width="220" height="145" alt="">
-						</a>
-						<a href="#">
-							<img src="img/LG.jpg" width="220" height="145" alt="">
-						</a>
-						<a href="#">
-							<img src="img/AEG.jpg" width="220" height="145" alt="">
-						</a>
-						<a href="#">
-							<img src="img/Metabo.jpg" width="220" height="145" alt="">
-						</a>
-					</div>
-				</section>
-			</div>
-		</div>
-		<div class="services">
-			<div class="container">
-				<h3>Сервисы</h3>
-				<p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-				<div class="services-slider">
-					<input type="radio" id="delivery-btn" name="toggle" checked>
-					<input type="radio" id="guaranty-btn" name="toggle">
-					<input type="radio" id="credit-btn" name="toggle">
-					<div class="services-slider-controls">
-						<label for="delivery-btn">Доставка</label>
-						<label for="guaranty-btn">Гарантия</label>
-						<label for="credit-btn">Кредит</label>
-					</div>
-					<div class="services-slides">
-						<div class="services-slide">
-							<p class="title">Доставка</p>
-							<p class="details">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-						</div>
-					</div>
+				</div>
+				<div class="promo">
+					<span class="promo-title">Скидки 50%</span>
+					<a class="promo-btn" href="#">На 350 товаров</a>
+					<img class="promo-icon" src="img/icon-bucket.png" width="44" height="65" alt="">
+				</div>
+				<div class="promo">
+					<span class="promo-title">Доставка</span>
+					<a class="promo-btn" href="#">Бесплатно</a>
+					<img class="promo-icon" src="img/icon-track.png" width="78" height="63" alt="">
 				</div>
 			</div>
 		</div>
-		<div class="about-us">
-			<div class="container">
-				<section class="about-company">
-					<h1>Компания Техномарт</h1>
-					<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-					<p>Мы можем доставить наш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-					<ul>
-						<li>Деловые линии</li>
-						<li>Автотрейдинг</li>
-						<li>ЖелДорЭкспедиция</li>
-					</ul>
-					<a class="btn-red" href="#">Подробнее о компании</a>
-				</section>
-				<aside class="contacts">
-					<h3>Контакты</h3>
-					<p>Вы можете забрать товар сами, заехав в наш офис:</p>
-					<div class="map-wrapper" id="map-canvas"></div>
-					<a class="btn-red open-modal-window" href="#">Заблудились? Напишите нам!</a>
-				</aside>
+		<section class="section">
+			<div class="section-header">
+				<h3 class="section-title">Популярные товары:</h3>
+				<a class="section-btn" href="#">Все популярные товары</a>
 			</div>
-		</div>
-		<footer class="main-footer">
-			<div class="footer-top">
-				<div class="footer-left">
-					<a class="logo" href="#">Техномарт</a>
-					<div class="footer-contacts"> <span>
-						г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
-						+7 (812) 555-05-55
-					</span>
-				</div>
-			</div>
-			<div class="footer-right">
-				<div class="footer-navigation">
-					<ul class="footer-nav-1">
-						<li><a href="#">Компания</a></li>
-						<li><a href="#">Новости</a></li>
-						<li><a href="#">Каталог</a></li>
-						<li><a href="#">Доставка</a></li>
-						<li><a href="#">Контакты</a></li>
-					</ul>
-					<ul class="footer-nav-2">
-						<li><a href="#">Материалы</a></li>
-						<li><a href="#">Техника</a></li>
-						<li><a href="#">Инструмент</a></li>
-						<li><a href="#">Спецпредложения</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="footrr-bottom">
-			<div class="footer-left">
-				<div class="container">
-					<p class="copyright">
-						2010-2016 Компания "Техномарт"<br>
-						Все права защищены
-					</p>
-				</div>
-			</div>
-			<div class="footer-right">
-				<div class="footer-socials">
-					<div class="social-btns">
-						<a class="vk-btn" href="#">vk</a>
-						<a class="fb-btn" href="#">fb</a>
-						<a class="ig-btn" href="#">ig</a>
+			<div class="catalog">
+				<div class="catalog-item">
+					<img class="item-img" src="img/bfg-9000.jpg" width="184" height="164" alt="">
+					<div class="item-title">
+						<p>Перфоратор BOSCH BFG 9000</p>
+						<p >32 500 р.</p>
 					</div>
-					<p class="footer-feedback">
-						Обратная связь:<br>
-						<a href="#">mail@htmlacademy.ru</a>
-					</p>
-					<p>Разработано:</p>
-					<a class="btn" href="https://htmlacademy.ru">HTML Academy></a>
+					<a class="btn-red" href="#">25 500 р.</a>
+					<div class="buy-item">
+						<a class="btn-green "href="#">Купить</a>
+						<a class="btn-share" href="#">В закладки</a>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<img class="item-img"  src="img/bfg-3000.jpg" width="127" height="112" alt="">
+					<div class="item-title">
+						<p>Перфоратор BOSCH BFG 3000</p>
+						<p>22 500 р.</p>
+					</div>
+					<a class="btn-red" href="#">15 500 р.</a>
+					<div class="buy-item">
+						<a class="btn-green "href="#">Купить</a>
+						<a class="btn-share" href="#">В закладки</a>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<img class="item-img"  src="img/bfg-6000.jpg" width="144" height="128" alt="">
+					<div class="item-title">
+						<p>Перфоратор BOSCH BFG 6000</p>
+						<p>30 500 р.</p>
+					</div>
+					<a class="btn-red" href="#">25 500 р.</a>
+					<div class="buy-item">
+						<a class="btn-green "href="#">Купить</a>
+						<a class="btn-share" href="#">В закладки</a>
+					</div>
+				</div>
+				<div class="catalog-item flag-new no-discount">
+					<img class="item-img"  src="img/bfg-2000.jpg" width="127" height="112" alt="">
+					<div class="item-title">	
+						<p>Перфоратор BOSCH BFG 2000</p>
+					</div>
+					<a class="btn-red" href="#">12 500 р.</a>
+					<div class="buy-item">
+						<a class="btn-green "href="#">Купить</a>
+						<a class="btn-share" href="#">В закладки</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section">
+			<div class="selection-header">
+				<h3 class="section-title">Популярные производители:</h3>
+				<a class="section-btn" href="#">Все производители</a>
+			</div>
+			<div class="brands">
+				<a href="#">
+					<img src="img/bosch.jpg" width="220" height="145" alt="">
+				</a>
+				<a href="#">
+					<img src="img/Makita.jpg" width="220" height="145" alt="">
+				</a>
+				<a href="">
+					<img src="img/DeWALT.jpg" width="220" height="145" alt="">
+				</a>
+				<a href="#">
+					<img src="img/Интерскол.jpg" width="220" height="145" alt="">
+				</a>
+				<a href="#">
+					<img src="img/Hitachi.jpg" width="220" height="145" alt="">
+				</a>
+				<a href="#">
+					<img src="img/LG.jpg" width="220" height="145" alt="">
+				</a>
+				<a href="#">
+					<img src="img/AEG.jpg" width="220" height="145" alt="">
+				</a>
+				<a href="#">
+					<img src="img/Metabo.jpg" width="220" height="145" alt="">
+				</a>
+			</div>
+		</section>
+	</div>
+</div>
+<div class="services">
+	<div class="container">
+		<h3>Сервисы</h3>
+		<p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+		<div class="services-slider">
+			<input type="radio" id="delivery-btn" name="toggle" value="delivery-btn" checked>
+			<input type="radio" id="guaranty-btn" name="toggle" value="guaranty-btn">
+			<input type="radio" id="credit-btn" name="toggle" value="credit-btn">
+			<div class="services-slider-controls">
+				<label for="delivery-btn">Доставка</label>
+				<label for="guaranty-btn">Гарантия</label>
+				<label for="credit-btn">Кредит</label>
+			</div>
+			<div class="services-slides">
+				<div class="services-slide">
+					<p class="title">Доставка</p>
+					<p class="details">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
 				</div>
 			</div>
 		</div>
-	</footer>
+	</div>
+</div>
+<div class="about-us">
+	<div class="container">
+		<section class="about-company">
+			<h1>Компания Техномарт</h1>
+			<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+			<p>Мы можем доставить наш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+			<ul>
+				<li>Деловые линии</li>
+				<li>Автотрейдинг</li>
+				<li>ЖелДорЭкспедиция</li>
+			</ul>
+			<a class="btn-red" href="#">Подробнее о компании</a>
+		</section>
+		<aside class="contacts">
+			<h3>Контакты</h3>
+			<p>Вы можете забрать товар сами, заехав в наш офис:</p>
+			<div class="map-wrapper" id="map-canvas">
+				<img src="img/map.jpg" width="300" height="158" alt="">
+			</div>
+			<a class="btn-red open-modal-window" href="#">Заблудились? Напишите нам!</a>
+		</aside>
+	</div>
+</div>
+<footer class="main-footer">
+	<div class="footer-top">
+		<div class="footer-left">
+			<a class="logo" href="#">Техномарт</a>
+			<div class="footer-contacts"> <span>
+				г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
+				+7 (812) 555-05-55
+			</span>
+		</div>
+	</div>
+	<div class="footer-right">
+		<div class="footer-navigation">
+			<ul class="footer-nav">
+				<li><a href="#">Компания</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Каталог</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+			<ul class="footer-nav yellow">
+				<li><a href="#">Материалы</a></li>
+				<li><a href="#">Техника</a></li>
+				<li><a href="#">Инструмент</a></li>
+				<li><a href="#">Спецпредложения</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="footrr-bottom">
+	<div class="footer-left">
+		<div class="container">
+			<p class="copyright">
+				2010-2016 Компания "Техномарт"<br>
+				Все права защищены
+			</p>
+		</div>
+	</div>
+	<div class="footer-right">
+		<div class="footer-socials">
+			<div class="social-btns">
+				<a class="vk-btn" href="#">vk</a>
+				<a class="fb-btn" href="#">fb</a>
+				<a class="ig-btn" href="#">ig</a>
+			</div>
+			<p class="footer-feedback">
+				Обратная связь:<br>
+				<a class="yellow" href="#">mail@htmlacademy.ru</a>
+			</p>
+			<p>Разработано:</p>
+			<a class="yellow" href="https://htmlacademy.ru">HTML Academy></a>
+		</div>
+	</div>
+</div>
+</footer>
 </body>
 </html>
 
